src/parsers/snapshots/bevy_state_plugin_generator__parsers__tests__parse_node@Name.snap
---
source: src/parsers/tests.rs
expression: parse_node(input)
---
Ok(("", Singleton(Identifier("Name"))))
